oc/deploy/service.template.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: '9090'
    prometheus.io/scrape: 'true'
  labels:
    app: {appName}
  name: {appName}
  namespace: {namespace}
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 9090-tcp
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    deploymentconfig: {appName}
  type: ClusterIP
